	PR c++/55564 	* pt.c (unify) [ARRAY_TYPE]: Unify the element type before the bounds.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194248 138bc75d-0d04-0410-961f-82ee72b054a4